# PySWEB

./: README.md  pyproject.toml
core/: era5land_download_config.py  era5land_refet.py  era5land_stack.py  gee_downloader.py  met_input_paths.py  soil_hydra_funs.py  ssebop_au.py  swb_model_1d.py  thomas_solve_tridiagonal_matrix.py
notebooks/: 01_plot_heatmap.ipynb  01_run_pysweb.ipynb  02_plot_heatmap.ipynb  03_plot_time_series.ipynb  03_run_with_pysweb.ipynb  README.md
pysweb/: __init__.py
pysweb/dem/: __init__.py  api.py  nasadem.py
pysweb/io/: __init__.py  gee.py  gee_downloader.py
pysweb/met/: __init__.py  paths.py
pysweb/soil/: __init__.py  api.py  custom.py  mlcons.py  openlandmap.py  slga.py
pysweb/ssebop/: __init__.py  api.py  core.py  grid.py  landcover.py  landsat.py
pysweb/swb/: __init__.py  api.py  calibrate.py  core.py  preprocess.py  run.py  solver.py
pysweb/visualisation/: __init__.py  plot_heatmap.py  plot_time_series.py
spec/: 3_sweb_mlcons_preprocess_inputs.py  5_sweb_mlcons_run_model.py  sweb_mlcons_runner.sh
tests/: __init__.py
tests/core/: __init__.py  test_era5land_refet.py  test_gee_downloader_config.py
tests/dem/: __init__.py  test_api.py  test_nasadem.py
tests/io/: test_gee_downloader_config.py
visualisation/: plot_heatmap.py  plot_time_series.py
workflows/: 1_ssebop_prepare_inputs.py  1b_download_era5land_daily.py  1c_stack_era5land_daily.py  2_ssebop_run_model.py  3_sweb_preprocess_inputs.py  4_sweb_calib_domain.py  5_sweb_run_model.py  6_plot_results.py  ssebop_runner_landsat.sh  sweb_domain_runner.sh
(+59 files in other folders)
